# GL-WinAPI

./: .gitignore  CMakeLists.txt  build.bat
include/: main.h  win32_platform.h
src/: main.c  win32_platform.c
